--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,7 @@
       href="https://fonts.googleapis.com/css2?family=Maven+Pro:wght@400;700&display=swap"
       rel="stylesheet"
     />
+    <link rel="stylesheet" href="../src/Components/Font/style.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
